shopping/k8s/shoppingclient-deployment.yaml
# ============================================
# Shopping.Client Deployment
# ============================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingclient-deployment
  labels:
    app: shoppingclient

spec:
  # Client 也是無狀態服務，可以有多個副本
  replicas: 3
  
  selector:
    matchLabels:
      app: shoppingclient
  
  template:
    metadata:
      labels:
        app: shoppingclient
    
    spec:
      containers:
      - name: shoppingclient
        image: acrshoppingdev.azurecr.io/shoppingclient:v1
        imagePullPolicy: Always
        
        ports:
        - containerPort: 80     # Client 監聽的埠號
        
        # ----------------------------------------
        # 環境變數：設定 API 的網址
        # ----------------------------------------
        volumeMounts:
        - name: dataprotection-keys
          mountPath: /app/dataprotection-keys
      volumes:
      - name: dataprotection-keys
        persistentVolumeClaim:
          claimName: dataprotection-pvc
